--- a/sync-thermal-service/src/ics/client/printer/service/DatabaseConfig.form
+++ b/sync-thermal-service/src/ics/client/printer/service/DatabaseConfig.form
@@ -191,7 +191,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtDbHost">
               <Properties>
-                <Property name="text" type="java.lang.String" value="localhost"/>
+                <Property name="text" type="java.lang.String" value="127.0.0.1"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JComboBox" name="cbDatabaseNameList">
@@ -357,7 +357,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtDbHost1">
               <Properties>
-                <Property name="text" type="java.lang.String" value="localhost"/>
+                <Property name="text" type="java.lang.String" value="127.0.0.1"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JComboBox" name="cbDatabaseNameList1">
@@ -521,7 +521,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtDbHost2">
               <Properties>
-                <Property name="text" type="java.lang.String" value="localhost"/>
+                <Property name="text" type="java.lang.String" value="127.0.0.1"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JComboBox" name="cbDatabaseNameList2">
