--- a/sync-thermal-service/src/ics/client/printer/service/SocketConfig.form
+++ b/sync-thermal-service/src/ics/client/printer/service/SocketConfig.form
@@ -119,7 +119,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="http://localhost"/>
+            <Property name="text" type="java.lang.String" value="http://127.0.0.1"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel7">
